--- a/courseview.html
+++ b/courseview.html
@@ -30,10 +30,10 @@
             <div class="container-fluid padding-top-bottom">
                 <div class="row">
                     <div class="col-4">
-                        <h6 class="text-light mouse-pointer panel-back-button"><i class="material-icons navbar-toggler-icon">&#xE5C4;</i> </h6>
+                        <h6 class="text-light mouse-pointer"><i class="material-icons navbar-toggler-icon">&#xE5C4;</i> <custom class="text-light text-icon">Physics II</custom></h6>
                     </div>
                     <div class="col-4 text-center padding-top-10 expand-images-button">
-                        <h6 class="text-dark mouse-pointer panel-back-button ">Images<i class="material-icons text-icon">&#xE313;</i></h6>
+                        <h6 class="text-dark mouse-pointer">Images<i class="material-icons text-icon">&#xE313;</i></h6>
                     </div>
                     <div class="col-4 show-nav-bar">
                         <h6 class="text-light mouse-pointer float-right" ><i class="material-icons">&#xE5D2;</i></h6>
@@ -85,35 +85,13 @@
             <div  id="progress-loader" class="loader">Loading...</div>
 
             <div id="pages">
-                <div class="card paper document hovering-shadow-small margin-bottom-20 current-page">
+                <div class="card paper document hovering-shadow-small margin-bottom-20 current-page" style="opacity: 1;padding-top: 8px;">
                     <div class="card-body">
                         <h5 class="card-title initial-fade-in" >Week One: Monday
                             <button type="button" class="mouse-pointer float-right btn btn-sm btn-outline-primary btn-success"  data-toggle="modal" data-target="#exampleModalLong">VIEW ASSIGNMENTS</button>
                         </h5>
                         <h6 class="card-subtitle mb-2 text-muted initial-fade-in">Physics II  1/6/2017</h6><br>
                         <div class="all-notes">
-                            <div class="single-note" data-type="note" data-id="noteID">
-                                <div class="row">
-                                    <div class="col-1 text-light show-on-hover opacity-none rating-buttons" data-value="not-selected">
-                                        <h6><i class="material-icons text-icon mouse-pointer check-mark">&#xE5CA;</i>
-                                            <i class="material-icons text-icon mouse-pointer delete-mark">&#xE5CD;</i></h6>
-                                    </div>
-                                    <div class="col-10">
-                                        <p class="lead margin-bottom-0">
-                                            Newton loved playing undr trees and running across ftown as fast as he could. Heounf out that
-                                            gravity is the only that can hold him down
-                                        </p>
-                                    </div>
-                                    <div class="col-1 show-on-hover opacity-none">
-                                        <h6>
-                                            <i class="material-icons text-icon mouse-pointer">&#xE5D4;</i>
-                                        </h6>
-                                    </div>
-                                    <div class="offset-1 col-auto show-on-hover opacity-none">
-                                        <p class="xsmall margin-bottom-0 text-primary">Bootykicker <custom class="text-muted">4:35 PM</custom></p>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
 
                     </div>
