--- a/courseview.html
+++ b/courseview.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="scss/moebootstrap.css" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="css/dropzone.min.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -104,7 +105,7 @@
 
         <div class="container">
             <div class="form-group">
-                <textarea class="form-control enter-notes bg-primary text-white" id="exampleFormControlTextarea1" rows="3" placeholder="Enter text notes here..."></textarea>
+                <textarea class="form-control enter-notes bg-primary text-white medium autoExpand" id="note_content" rows="3" placeholder="Enter text notes here..."></textarea>
             </div>
 
             <div class="row justify-content-between">
@@ -112,7 +113,7 @@
                     <button type="button" class="mouse-pointer float-right btn btn-outline-light margin-right-5 " onclick=""><i class="material-icons text-icon">&#xE3B0;</i></button>
                 </div>
                 <div class="col-auto align-self-end padding-right-left-16 padding-bottom-5">
-                    <button type="button" class="mouse-pointer float-right btn btn-secondary margin-none " onclick="">Submit</button>
+                    <button type="button" class="mouse-pointer float-right btn btn-secondary margin-none " onclick="submitNote()">Submit</button>
                 </div>
             </div>
         </div>
@@ -176,18 +177,36 @@
                 </button>
             </div>
             <div class="modal-body">
-                <div class="row" data-type="assignment" data-id="objectID">
-                    <div class="col-2">
-                        <p>1/12</p>
-                    </div>
-                    <div class="col-8">
-                        <p>HOMEWORK: HW #1 - Polynomials</p>
-                    </div>
-                    <div class="col-2 rating-buttons" data-value="not-selected">
-                        <i class="material-icons text-icon mouse-pointer text-light check-mark">&#xE5CA;</i>
-                        <i class="material-icons text-icon mouse-pointer text-light delete-mark">&#xE5CD;</i>
+                <div class="single-item"  data-type="assignments" id="objectID">
+                    <div class="row">
+                        <div class="col-2">
+                            <p>1/12</p>
+                        </div>
+                        <div class="col-8">
+                            <p>HOMEWORK: HW #1 - Polynomials</p>
+                        </div>
+                        <div class="col-2 rating-buttons" data-value="not-selected">
+                            <i class="material-icons text-icon mouse-pointer text-light check-mark">&#xE5CA;</i>
+                            <i class="material-icons text-icon mouse-pointer text-light delete-mark">&#xE5CD;</i>
+                        </div>
                     </div>
                 </div>
+
+                <div class="single-item"  data-type="assignments" id="objectI2D">
+                    <div class="row">
+                        <div class="col-2">
+                            <p>1/12</p>
+                        </div>
+                        <div class="col-8">
+                            <p>HOMEWORK: HW #1 - Polynomials</p>
+                        </div>
+                        <div class="col-2 rating-buttons" data-value="not-selected">
+                            <i class="material-icons text-icon mouse-pointer text-light check-mark">&#xE5CA;</i>
+                            <i class="material-icons text-icon mouse-pointer text-light delete-mark">&#xE5CD;</i>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -196,6 +215,27 @@
         </div>
     </div>
 </div>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+    Launch demo modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <form action="/file-upload"
+                      class="dropzone text-center w-100 padding-top-bottom-60 margin-bottom-20"
+                      id="my-awesome-dropzone"></form>
+                <button type="button" class="btn btn-primary float-right">Submit</button>
+                <button type="button" class="btn btn-outline-dark float-right margin-right-5">Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
@@ -208,6 +248,7 @@
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+<script src="js/vendor/dropzone.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/courseview.js"></script>
 
